# glomp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bld.sh  clean.sh  compile.sh  compile_tests.sh  make_tests.sh  nsm.sh  run_tests.sh  test_cond.glmp
docs/: todo.txt
include/: compiler.hpp  interpreter.hpp  lexer.hpp  tokens.hpp
src/: compiler.cpp  glomp.cpp  interpreter.cpp  lexer.cpp
test/: drop.glmp  dup2.glmp  mul.glmp
test/src/: add.glmp  char.glmp  conditions.glmp  drop.glmp  dump.glmp  math.glmp  mod.glmp  stack_ops.glmp  sub.glmp
test_src/: add.glmp  comment.glmp  div.glmp  drop.glmp  dump.glmp  dup.glmp  dup2.glmp  mul.glmp  out.glmp  rot.glmp  sub.glmp  swap.glmp
